--- a/src/app/App.css
+++ b/src/app/App.css
@@ -38,6 +38,8 @@
   width: 50px;
   color: white;
   border-radius: 1em;
+  border-color: gray;
+  border-width: 2px;
   margin-top: 5px;
 }
 
@@ -46,8 +48,8 @@
 }
 
 .zoom-container {
-  position: absolute;
-  right: 10px;
-  top: 50px;
+  position: fixed;
+  right: 5px;
+  top: 5px;
   display: block !important;
 }
